--- a/docs/fpc.sty
+++ b/docs/fpc.sty
@@ -189,6 +189,7 @@
 \newcommand{\ostwo}{\textsc{os/2}\xspace}
 \newcommand{\windows}{\textsc{Windows}\xspace}
 \newcommand{\windowsnt}{\textsc{Windows NT}\xspace}
+\newcommand{\macos}{\textsc{mac OS}\xspace}
 \newcommand{\fpc}{Free Pascal\xspace}
 \newcommand{\gnu}{\textsc{gnu}\xspace}
 \newcommand{\atari}{\textsc{Atari}\xspace}
