--- a/packages/extra/libgd/README
+++ b/packages/extra/libgd/README
@@ -28,7 +28,11 @@ The gdtest example is adapted from the example of the gd unit by Mike Bradbery.
 It shows how to use the pascal-like functions in the gd unit instead of the
 raw C like functions which use pchars.
 
+usage:
+ gdtest chart.png
+
 the gdtestcgi example shows how to output an image to standard output,
 this can be used for CGI scripts.
 
 Michael.
+
